src/routes/portal/portal-styles.scss
@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap");

html {
  height: 100%;
  background-color: var(--primary-color);
}
body {
  height: 100%;
  font-family:"Courier Prime", monospace;
}
:root {
  --primary-color: #f44336;
  --primary-color-light: #ff7961;
  --primary-color-dark: #ba000d;
  --secondary-color: #9e9e9e;
  --secondary-color-light: rgb(238, 238, 238);
  --secondary-color-dark: #707070;
}
a:link,
a:visited,
a:active {
  text-decoration: none;
}
textarea::placeholder {
  font-family: "Courier Prime", monospace;
}
.header {
  font-family: "Courier Prime", monospace;
  text-align: right;
  padding-top: 2vh;
  margin-right: 5vw;
}
.nav-bar {
  display: absolute;
  left: 0px;
  float: left;
  width: 10vw;
  height: 100vh;
  background-color: var(--primary-color);
}
.nav-links {
  display: fixed;
  left: 0vw;
  margin-top: 10vh;
}
.nav-links a {
  display: block;
  font-size: 18pt;
  font-family: "Courier Prime", monospace;
  color: white;
  text-align: center;
  border-radius: 5px;
  margin: 2vh 0.2vw;
  padding: 10px;
  transition: background-color 0.5s;
}
.nav-links a:hover {
  text-decoration: underline;
  background-color: var(--primary-color-light);
}
.main {
  display: absolute;
  right: 0px;
  height: 100vh;
  margin-left: 10vw;
  border-top-left-radius: 70px;
  border-bottom-left-radius: 70px;
  background-color: var(--secondary-color-light);
  box-shadow: inset 2px 0em 10px var(--secondary-color);
}
#logout {
  margin-top: 55vh;
}
.content {
  margin: 2% 3%;
  height: 90%;
}

